@@ -85,7 +85,7 @@ is $@, '';
 
 SKIP: {
   skip( "skipping a Unixish-only tests", 1 )
-      unless $mb->os_type eq 'Unix';
+      unless $mb->is_unixish;
 
   $mb->{config}->push(ld => "FOO=BAR ".$mb->config('ld'));
   eval {$mb->dispatch('build')};
