@@ -1,5 +1,9 @@
 Revision history for Perl extension Module::Build.
 
+ - Added is_vmsish(), is_windowsish(), and is_unixish() boolean
+   convenience functions.  Fixes some test failures on platforms where
+   $^O is set to a value we don't know about (like 'gnu').
+
  - Upgraded to version.pm 0.7203. [John Peacock]
 
  - Support get_action_docs() =head2 style. [ewilhelm]
